# proc-macro-gpt

./: .gitignore  Cargo.toml  README.md
ad_derive/: Cargo.toml
ad_derive/src/: lib.rs
gpt2/: Cargo.toml  data.py
gpt2/src/: attn.rs  dropout.rs  ff.rs  ln.rs  main.rs  op.rs  softmax.rs  transformer.rs
