[package]
edition = "2021"
name = "gpt2"
version = "0.1.0"

[dependencies]
ad_derive = {path = "../ad_derive"}
bson = "2.14.0"
ndarray = {version = "0.16.0", features = ["serde", "rayon", "matrixmultiply-threading"]}
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
